--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -7,7 +7,7 @@ bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
-bindd = SUPER, N, Editor, exec, omarchy-launch-editor
+bindd = SUPER, N, Editor, exec, nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
@@ -28,4 +28,4 @@ bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compo
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 #unbind = SUPER, SPACE
-bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
+#bindd = SUPER, SPACE, OmarchyMenu, exec, omarchy-menu
