--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -9,7 +9,7 @@ bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER, N, Editor, exec, nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER, D, Discord, exec, flatpak run com.discordapp.Discord
 bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
@@ -25,7 +25,6 @@ bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp 
 bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
-
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 #unbind = SUPER, SPACE
 #bindd = SUPER, SPACE, OmarchyMenu, exec, omarchy-menu
