--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -25,6 +25,8 @@ bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp 
 bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+
+bind = SUPER SHIFT, F, fullscreen, 1
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 #unbind = SUPER, SPACE
 #bindd = SUPER, SPACE, OmarchyMenu, exec, omarchy-menu
