added apps on startup

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,2 +1,9 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
+
+$terminal = uwsm app -- $TERMINAL
+$browser = flatpak run app.zen_browser.zen
+
+exec-once = $terminal
+exec-once = $browser
+exec-once = flatpak run com.discordapp.Discord
