changed windows.conf to have different window rules

--- a/.config/hypr/windows.conf
+++ b/.config/hypr/windows.conf
@@ -1,26 +1,13 @@
-windowrule{
-    name=~^LTspiceXVII.* - LTspice XVII$
-    match:title="LTspice"
-    fullscreen=1
-    
-}
+# LTspice fullscreen
+windowrulev2 = fullscreen, title:^.*LTspice XVII$
 
-windowrule{
-  name=discord
-  match:class="com.discordapp.Discord"
-  workspace=4
-}
+# Discord on workspace 5
+windowrulev2 = workspace 5 silent, class:^com\.discordapp\.Discord$
 
-windowrule{
-  name=zen_browser
-  match:class="app.zen_browser.zen"
-  workspace=1
-}
+# Zen Browser on workspace 1
+windowrulev2 = workspace 1 silent, class:^app\.zen_browser\.zen$
 
-windowrule{
-  name=terminal
-  match:class="Alacritty"
-  workspace=2
-}
+# Alacritty terminal on workspace 2
+windowrulev2 = workspace 2 silent, class:^Alacritty$
 
 
