--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -13,7 +13,7 @@ bindd = SUPER, D, Discord, exec, flatpak run com.discordapp.Discord
 bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER, N, Neovim, exec, $terminal --class nvim -e nvim 
 bind = SUPER,Q,exit,
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
