--- a/.config/hypr/windows.conf
+++ b/.config/hypr/windows.conf
@@ -1,13 +1,14 @@
 # LTspice fullscreen
-windowrulev2 = fullscreen, title:^.*LTspice XVII$
+windowrule = fullscreen on, match:title ^.*LTspice XVII$
 
 # Discord on workspace 5
-windowrulev2 = workspace 5 silent, class:^com\.discordapp\.Discord$
+windowrule = workspace 5, match:class ^com\.discordapp\.Discord$
 
 # Zen Browser on workspace 1
-windowrulev2 = workspace 1 silent, class:^app\.zen_browser\.zen$
+windowrule = workspace 1, match:class ^app\.zen_browser\.zen$
 
 # Alacritty terminal on workspace 2
-windowrulev2 = workspace 2 silent, class:^Alacritty$
+windowrule = workspace 2, match:class ^Alacritty$
 
-
+windowrule = workspace 3, match:class ^nvim$
+windworule = workspace 4, match:class ^obsidian$
