--- a/.config/git/config
+++ b/.config/git/config
@@ -18,3 +18,4 @@
 	helper = !/usr/bin/gh auth git-credential
 [safe]
 	directory = /home/logan/Projects/Flight-Controller
+	directory = /home/logan/Projects/Lavli-Nodes
