--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -3,7 +3,7 @@
 
 $terminal = uwsm app -- $TERMINAL
 $browser = flatpak run app.zen_browser.zen
-
+exec-once = nvim 
 exec-once = $terminal
 exec-once = $browser
 exec-once = flatpak run com.discordapp.Discord
