changed overall theme, need to test on non omarchy OS

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -1,9 +1,11 @@
 # Extra autostart processes
 # exec-once = uwsm app -- my-service
 
+exec-once = waybar
 $terminal = uwsm app -- $TERMINAL
 $browser = flatpak run app.zen_browser.zen
-exec-once = nvim 
+exec-once = uswm app -- nvim -disable-gpu --enable-wayland-ime
 exec-once = $terminal
 exec-once = $browser
 exec-once = flatpak run com.discordapp.Discord
+exec-once = uwsm app -- obsidian -disable-gpu --enable-wayland-ime
