--- a/.config/hypr/windows.conf
+++ b/.config/hypr/windows.conf
@@ -11,4 +11,17 @@ windowrule = workspace 1, match:class ^app\.zen_browser\.zen$
 windowrule = workspace 2, match:class ^Alacritty$
 
 windowrule = workspace 3, match:class ^nvim$
-windworule = workspace 4, match:class ^obsidian$
+windowrule = workspace 4, match:class ^obsidian$
+
+# Credit for these app specific tweaks : Omarchy OS
+source = ~/.local/share/omarchy/default/hypr/apps.conf
+
+windowrule = suppress_event maximize, match:class .*
+
+# Just dash of opacity by default
+windowrule = opacity 0.97 0.9, match:class .*
+
+# Fix some dragging issues with XWayland
+windowrule = no_focus on, match:class ^$, match:title ^$, match:xwayland 1, match:float 1, match:fullscreen 0, match:pin 0
+
+
