--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,7 +1,10 @@
-general.import = [ "theme.toml" ]
-
-[env]
-TERM = "xterm-256color"
+general.import = [
+  # uncomment the flavour you want below:
+  # "~/.config/alacritty/catppuccin-latte.toml"
+  # "~/.config/alacritty/catppuccin-frappe.toml"
+   "~/.config/alacritty/catppuccin-macchiato.toml"
+  # "~/.config/alacritty/catppuccin-mocha.toml"
+]
 
 [font]
 normal = { family = "CaskaydiaMono Nerd Font", style = "Regular" }
@@ -9,10 +12,15 @@ bold = { family = "CaskaydiaMono Nerd Font", style = "Bold" }
 italic = { family = "CaskaydiaMono Nerd Font", style = "Italic" }
 size = 9
 
+[env]
+TERM = "xterm-256color"
+
 [window]
 padding.x = 14
 padding.y = 14
-decorations = "None"
+decorations = "Full"
+opacity = 0.4
+blur = true
 
 [keyboard]
 bindings = [
