--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,15 +1,6 @@
 # Learn how to configure Hyprland: https://wiki.hyprland.org/Configuring/
 
 # Use defaults Omarchy defaults (but don't edit these directly!)
-source = ~/.local/share/omarchy/default/hypr/autostart.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/media.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/tiling.conf
-source = ~/.local/share/omarchy/default/hypr/bindings/utilities.conf
-source = ~/.local/share/omarchy/default/hypr/envs.conf
-source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
-source = ~/.local/share/omarchy/default/hypr/input.conf
-source = ~/.local/share/omarchy/default/hypr/windows.conf
-source = ~/.config/omarchy/current/theme/hyprland.conf
 
 # Change your own setup in these files (and overwrite any settings from defaults!)
 source = ~/.config/hypr/monitors.conf
@@ -19,6 +10,11 @@ source = ~/.config/hypr/envs.conf
 source = ~/.config/hypr/looknfeel.conf
 source = ~/.config/hypr/autostart.conf
 source = ~/.config/hypr/windows.conf
+source = ~/.config/hypr/hyprpaper.conf
+source = ~/.config/hypr/bindings/tiling.conf
+source = ~/.config/hypr/bindings/utilities.conf
+
+
 
 # NVIDIA environment variables
 env = NVD_BACKEND,direct
