--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,39 +1,83 @@
-source = ~/.config/omarchy/current/theme/hyprlock.conf
-
+# BACKGROUND
 background {
     monitor =
-    color = $color
-    path = ~/.config/omarchy/current/background
-    blur_passes = 3
+    path = ~/.config/assets/Beach-BG.jpg
+    blur_passes = 2
+    contrast = 0.8916
+    brightness = 0.8172
+    vibrancy = 0.1696
+    vibrancy_darkness = 0.0
 }
-
-animations {
-    enabled = false
+# GENERAL
+general {
+    no_fade_in = false
+    grace = 0
+    disable_loading_bar = false
 }
-
+# INPUT FIELD
 input-field {
     monitor =
-    size = 600, 100
-    position = 0, 0
+    size = 250, 60
+    outline_thickness = 2
+    dots_size = 0.2
+    dots_spacing = 0.2
+    dots_center = true
+    outer_color = rgba(0, 0, 0, 0)
+    inner_color = rgba(100, 114, 125, 0.4)
+    font_color = rgb(200, 200, 200)
+    fade_on_empty = false
+    font_family = SF Pro Display Bold
+    placeholder_text = <i><span foreground="##ffffff99">Enter Pass</span></i>
+    hide_input = false
+    position = 0, -290
     halign = center
     valign = center
-
-    inner_color = $inner_color
-    outer_color = $outer_color
-    outline_thickness = 4
-
-    font_family = CaskaydiaMono Nerd Font
-    font_color = $font_color
-
-    placeholder_text =   Enter Password 󰈷 
-    check_color = $check_color
-    fail_text = <i>$PAMFAIL ($ATTEMPTS)</i>
-
-    rounding = 10
-    shadow_passes = 0
-    fade_on_empty = false
 }
-
-auth {
-    fingerprint:enabled = true
+# Time
+label {
+    monitor =
+    text = cmd[update:1000] echo "<span>$(date +"%H:%M")</span>"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 130
+    font_family = SF Pro Display Bold
+    position = 0, 320
+    halign = center
+    valign = center
+}
+# Day-Month-Date
+label {
+    monitor =
+    text = cmd[update:1000] echo -e "$(date +"%A, %d %B")"
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 30
+    font_family = SF Pro Display Bold
+    position = 0, 165
+    halign = center
+    valign = center
+}
+# Profie-Photo
+image {
+    monitor =
+    path = ~/.config/assets/ProfilePic.jpg
+    border_color = 0xffdddddd
+    border_size = 0
+    size = 240
+    rounding = -1
+    rotate = 0
+    reload_time = -1
+    reload_cmd = 
+    position = 0, -20
+    halign = center
+    valign = center
+}
+# USER
+label {
+    monitor =
+    text = Hi, $USER
+    color = rgba(216, 222, 233, 0.70)
+    font_size = 25
+    font_family = SF Pro Display Bold
+    position = 0, -200
+    halign = center
+    valign = center
 }
