--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -10,9 +10,9 @@ background {
 }
 # GENERAL
 general {
-    no_fade_in = false
-    grace = 0
-    disable_loading_bar = false
+    #no_fade_in = false
+    #grace = 0
+    #disable_loading_bar = false
 }
 # INPUT FIELD
 input-field {
