added and changed arch auto start and kanata config

--- a/.config/hypr/autostart.conf
+++ b/.config/hypr/autostart.conf
@@ -2,10 +2,17 @@
 # exec-once = uwsm app -- my-service
 
 exec-once = waybar
-$terminal = uwsm app -- $TERMINAL
-$browser = flatpak run app.zen_browser.zen
-exec-once = uswm app -- nvim -disable-gpu --enable-wayland-ime
-exec-once = $terminal
-exec-once = $browser
+
+# Start background services first
+exec-once = uwsm app -- hyprpaper
+
+exec-once = uwsm app -- hyprlock
+# Launch applications with slight delays for dependencies
+exec-once = sleep 2 && uwsm app -- hyprctl hyprpaper wallpaper ",~/.config/assets/Beach-BG.jpg"
+exec-once = uwsm app -- $TERMINAL
+exec-once = uwsm app -- $TERMINAL --class nvim -e nvim
+exec-once = flatpak run app.zen_browser.zen
 exec-once = flatpak run com.discordapp.Discord
-exec-once = uwsm app -- obsidian -disable-gpu --enable-wayland-ime
+exec-once = uwsm app -- obsidian --disable-gpu --enable-wayland-ime
+
+exec-once = kanata --cfg ~/.config/kanata/kanata.kbd
