--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,2 @@
 preload = ~/.config/assets/Beach-BG.jpg
-wallpaper = eDP-2,~/.config/assets/Beach-BG.jpg
-ipc = on  
+wallpaper = ~/.config/assets/Beach-BG.jpg
