removed unwanted keys
rebased

--- a/.config/gh/hosts.yml
+++ b/.config/gh/hosts.yml
@@ -1,5 +1,5 @@
 github.com:
-    git_protocol: https
-    users:
-        ThePixelExpert:
-    user: ThePixelExpert
+  git_protocol: https
+  users:
+  user: ThePixelExpert
+  oauth_token: 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
