--- a/.config/gh/hosts.yml
+++ b/.config/gh/hosts.yml
@@ -1,5 +1,4 @@
 github.com:
   git_protocol: https
   users:
-  user: ThePixelExpert
-  oauth_token: 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
+    ThePixelExpert:
