--- a/.config/hypr/looknfeel.conf
+++ b/.config/hypr/looknfeel.conf
@@ -87,8 +87,7 @@ group {
         col.active = rgba(00000040)
         col.inactive = rgba(00000020)
 
-        gradients = true
-        gradient_rounding = 0
+        gradients = false
         gradient_round_only_edges = false
     }
 }
