--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -2,7 +2,7 @@
 $terminal = uwsm app -- $TERMINAL
 $browser = flatpak run app.zen_browser.zen
 
-bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, return, Terminal, exec, $terminal 
 bindd = SUPER, F, File manager, exec, thunar
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
