--- a/.config/kanata/kanata.service
+++ b/.config/kanata/kanata.service
@@ -4,7 +4,7 @@ After=local-fs.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/kanata --cfg ~/.config/kanata/kanata.kbd
+ExecStart=/usr/bin/kanata --cfg /home/logan/.config/kanata/kanata.kbd
 Restart=on-failure
 
 [Install]
