--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -18,4 +18,4 @@ bind = SUPER,Q,exit,
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bind = SUPER SHIFT, F, fullscreen, 1
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
-#unbind = SUPER, SPACE
+bind = SUPER,SPACE, exec, rofi -show drun
